[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/text23.png" type="Texture" id=2]
[ext_resource path="res://actors/Circle1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://resources/Tangerine-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=3]
size = 90
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Panel4:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1292, 316 ), Vector2( 574, 316 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel4:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Panel4:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 574, 316 ), Vector2( 1303, 316 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel4:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -102.0
margin_right = -152.0
margin_bottom = -102.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Circle1" parent="." instance=ExtResource( 3 )]
position = Vector2( 432, 180 )
scale = Vector2( 0.502656, 0.502656 )
moveSpeed = 80
duration = 7

[node name="Circle2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1123, 482 )
scale = Vector2( 0.247639, 0.247639 )
duration = 5

[node name="Circle3" parent="." instance=ExtResource( 3 )]
position = Vector2( 491, 530 )
scale = Vector2( 0.113194, 0.113194 )
duration = 5

[node name="Circle4" parent="." instance=ExtResource( 3 )]
position = Vector2( 831, 114 )
scale = Vector2( 0.178203, 0.178203 )
moveSpeed = 30
duration = 2

[node name="Circle5" parent="." instance=ExtResource( 3 )]
position = Vector2( 718.08, 410.266 )
scale = Vector2( 0.230778, 0.230778 )
duration = 4

[node name="Circle6" parent="." instance=ExtResource( 3 )]
position = Vector2( 825, 569 )
scale = Vector2( 0.178203, 0.178203 )
duration = 6

[node name="Circle7" parent="." instance=ExtResource( 3 )]
position = Vector2( 210, 663 )
scale = Vector2( 0.375996, 0.375996 )
duration = 10

[node name="text23" type="Sprite" parent="."]
position = Vector2( 1032, 159 )
scale = Vector2( 0.577785, 0.577785 )
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = -19.0
margin_top = 360.0
margin_right = 785.0
margin_bottom = 441.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" parent="Panel" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 478.0

[node name="Panel2" type="Panel" parent="."]
margin_left = -22.0
margin_top = 533.0
margin_right = 782.0
margin_bottom = 614.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ExitButton" parent="Panel2" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 478.0
text = "Exit"

[node name="Panel3" type="Panel" parent="."]
margin_left = -21.0
margin_top = 445.0
margin_right = 783.0
margin_bottom = 526.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SettingsButton" parent="Panel3" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 478.0
text = "About"

[node name="Panel4" type="Panel" parent="."]
visible = false
margin_left = 1303.0
margin_top = 316.0
margin_right = 1882.0
margin_bottom = 665.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel4"]
margin_left = 130.0
margin_top = 24.0
margin_right = 447.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.552941, 0.545098, 0.545098, 1 )
text = "Made by:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel4"]
margin_left = -12.0
margin_top = 23.0
margin_right = 587.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.533333, 0.835294, 0.866667, 1 )
text = "Weird Bug"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aboutSlide = SubResource( 4 )
anims/aboutSlideBack = SubResource( 5 )

[connection signal="pressed" from="Panel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Panel2/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Panel3/SettingsButton" to="." method="_on_SettingsButton_pressed"]
